app/assets/stylesheets/application.scss
/*
 * This is a manifest file that'll be compiled into application.css, which will include all the files
 * listed below.
 *
 * Any CSS and SCSS file within this directory, lib/assets/stylesheets, or any plugin's
 * vendor/assets/stylesheets directory can be referenced here using a relative path.
 *
 * You're free to add application-wide styles to this file and they'll appear at the bottom of the
 * compiled file so the styles you add here take precedence over styles defined in any other CSS/SCSS
 * files in this directory. Styles in this file should be added after the last require_* statement.
 * It is generally better to create a new file per style scope.
 *
 *= require_tree .
 *= require_self
 */

@import "bootstrap";
@import 'font-awesome-sprockets';
@import 'font-awesome';


//* ================ リセットCSS ============================ *//

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}
//* ================ Main =================================== *//

main {
  min-height: 100vh;
  min-width: 100vw;
}


//* =============== Body ==================================== *//

body {
  position: relative;
  min-width: 100vw;
}

.body_bg_color {
  background-color: rgba(166, 206, 57, .15);
  height: 100vh;
}

input[type=checkbox] {
  transform: scale(1.8);
}

.post-photo {
  width: 60vw;
  height: 60vh;
}

video {
  width: 60vw;
}

iframe {
  width: 60vw;
  height: 55vh;
}

//* =============== Footer ================================= *//
footer {
  position: absolute;
  bottom: 0;
  left: 0;
  width: 100%;
  position: -webkit-sticky;
    position: sticky;
    top: 0;
}

.footer {
  color: #196989;
  text-align: center;
  bottom: 0;
  left: 0;
  width: 100%;
  position: -webkit-sticky;
    position: sticky;
    top: 0;
}

//* =============== サインイン/サインアップページ ========= *//

.google-icon {
  margin-left: 5%;
}

.github-icon {
  margin-left: 5%;
}

//* =============== Topページ ============================= *//


.top_container {
  width: 100vw;
  height: 100vh;
  margin: 0 auto;
  margin-top: -1rem;
  padding: 0 0 0 5%;
  background-image: linear-gradient(#196989, #a6ce39);
}

.top_icon {
  padding-top: 20vh;
  text-align: center;
  color: #a6ce39;
}

//* =============== 投稿一覧(Topスクロール) ================ *//
#arrow_top {
    position: fixed;
    right: 5vh;
    bottom: 1vh;
  }

//* =============== 投稿詳細 =============================== *//

.post-show-image {
  margin-left: 20vw;
  padding: 0;
}

.post-show-explanation {
    margin-left: 20vw;
    width: 60vw;
    height: 40vh;
  }
.post-show-user-image {
    margin: 0 19vw;
  }

.mine-icon-area {
  position: relative;
}

.mine-comment {
  position: absolute;
  width: 30vw;
  height: 4vh;
  right: 6.5vw;
  bottom: 7.5vh;
  text-align: center;
  padding-top: 1vh;
}

.others-comment {
  position: absolute;
  width: 30vw;
  height: 4vh;
  left: 25vw;
  bottom: 7.5vh;
  text-align: center;
  padding-top: 1vh;
}

#enlarge {
  position: fixed;
  top: 0;
  left: 0;
  background-color: white;
  width: 100%;
  min-height: 100%;
  display: none;
}
#enlarge img,
#enlarge video,
#enlarge iframe {
  display: block;
  margin: 0 auto;
  margin-top: 5vh;
}


#enlarge img:hover {
  transform: scale(5);
}


.enlarge-end {
  position: fixed;
  top: 1vh;
}

//* =============== ハンバーガーメニュー ==================== *//

.navbar-dark .navbar-toggler-icon{
  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' width='30' height='30' viewBox='0 0 30 30'%3e%3cpath stroke='rgba(166, 206, 57, 1)' stroke-linecap='round' stroke-miterlimit='10' stroke-width='3' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e"); /* 三本線 */
}

.navbar-dark .navbar-toggler{
  border-color: rgba(166, 206, 57, 1);
}



//* =============== @media =============== *//


@media (max-width: 700px) {
  .post-photo {
    width: 100%;
    height: 50vh;
  }

  video {
    width: 100%;
    height: 40vh;
  }

  iframe {
    width: 100%;
    height: 50vh;
  }

  .post-show-image {
    margin: 0;
  }
  .post-show-explanation {
    margin: 0;
    width: 100vw;
    height: 40vh;
  }

  .post-show-user-image {
    margin-left: 18vw;
  }
} /* @media */

@media (max-width: 400px) {
  .google-icon {
  margin-left: 10%;
  text-decoration: none;
}

  .github-icon {
    margin-left: 10%;
    text-decoration: none;
  }
} /* @media */

